--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Welcome to the AI Quotes</h1>
+
+    <footer>This AI project was coded by <a href="https://github.com/1victoriao" target="_blank"> Victoria A. </a> and is open-sourced on <a href="https://github.com/1victoriao/quotes-generator" target="_blank"> GitHub </a> 
+    </footer>
+ 
     <script>
       src = "src/index.js";
     </script>
