--- a/index.html
+++ b/index.html
@@ -3,14 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>AI Quote Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Quotes</h1>
+    <header>
+      <h1>Welcome to the AI Quotes</h1>
+    </header>
 
-    <footer>This AI project was coded by <a href="https://github.com/1victoriao" target="_blank"> Victoria A. </a> and is open-sourced on <a href="https://github.com/1victoriao/quotes-generator" target="_blank"> GitHub </a> 
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the quote"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The quotes will go here
+        <br />
+        The quotes will go here
+      </div>
+    </main>
+
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/1victoriao" target="_blank"> Victoria A. </a>
+      and is open-sourced on
+      <a href="https://github.com/1victoriao/quotes-generator" target="_blank">
+        GitHub
+      </a>
     </footer>
- 
+
     <script>
       src = "src/index.js";
     </script>
