--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AI Quote Generator</title>
   </head>
   <body>
+    <div class="container">
     <header>
       <h1>Welcome to the AI Quotes</h1>
     </header>
@@ -19,16 +20,17 @@
           autofocus
           required
           autocomplete="off"
+          class="instructions"
         />
-        <input type="submit" />
+        <input type="submit"  class="submit-button"/>
       </form>
-      <div>
+      <div class="quote">
         The quotes will go here
         <br />
         The quotes will go here
       </div>
     </main>
-
+ 
     <footer>
       This AI project was coded by
       <a href="https://github.com/1victoriao" target="_blank"> Victoria A. </a>
@@ -37,9 +39,11 @@
         GitHub
       </a>
     </footer>
+    </div>
 
     <script>
       src = "src/index.js";
     </script>
+
   </body>
 </html>
