added typewriter feature to javascript and html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
     <title>AI Quote Generator</title>
   </head>
@@ -24,7 +25,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="quote" id="quote"></div>
+        <div class="quotes" id="quotes"></div>
       </main>
 
       <footer>
