--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
       </footer>
     </div>
 
-    <script>
-      src = "src/index.js";
-    </script>
+    <script src="src/index.js"></script>
   </body>
 </html>
