--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
         <a href="https://github.com/1victoriao" target="_blank">
           Victoria A.
         </a>
-        and is open-sourced on
+        It is open-sourced on
         <a
           href="https://github.com/1victoriao/quotes-generator"
           target="_blank"
         >
-          GitHub
+          GitHub </a>  and hosted on
+          <a href="https://ai-quotes.netlify.app">Netlify.</a>
         </a>
       </footer>
     </div>
