added html, javascript and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form id="quote-generator-form">
           <input
             type="text"
-            placeholder="Enter the topic of the quote"
+            placeholder="Enter your desired quote topic here"
             autofocus
             required
             autocomplete="off"
@@ -27,7 +27,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="quotes" id="quotes"></div>
+        <div class="quotes hidden" id="quotes"></div>
       </main>
 
       <footer>
@@ -35,6 +35,9 @@
         <a href="https://github.com/1victoriao" target="_blank">
           Victoria A.
         </a>
+        
+        <br />
+        
         It is open-sourced on
         <a
           href="https://github.com/1victoriao/quotes-generator"
